
    [ BUG FIXES ]
    * Minor corrections (jamhed, felixdo)
    * Log if a view and or a layout is not found (Alberto Simões, reported
      by David Previous)

1.3079_04   02.10.2011

    [ ENHANCEMENTS ]
    * PSGI handler code cleaned up (chromatic).
    * Improved warning localizations (chromatic).

    [ DOCUMENTATION ]
    * Dancer::Plugins typos (Olof Johansson).
    * PSGI handler documented (chromatic).

1.3079_03   10.09.2011

    [ ENHANCEMENTS ]
    * Support XML::Simple configuration for serializing/deserializing
      (Alberto Simões)
    * Hard deprecate lots of stuff (Alberto Simões)

    [ BUG FIXES ]
    * Don't clobber TT INCLUDE_PATH if the user set it specifically in the
      config file - Issue 643 (David Precious, reported by meraxes)
    * Don't require a space after semi-colon delimiting multiple name=value
      cookie pairs - Issue 642 (David Precious, reported by travisbeck)

1.3079_02   28.08.2011

    [ BUG FIXES ]
    * Remove hard-coded version from 404.html and 500.html (Alberto Simões)
    * Fix logging of UTF8-encoded strings (jamhed)
    * Do not clean 'vars' during forward (Alberto Simões)

    [ ENHANCEMENTS ]
    * Add streaming support to send_file. (Sawyer X)

1.3072      23.08.2011
    ** Codename: Precious David Precious // David Precious (bigpresh) **

    [ ENHANCEMENTS ]
    * No functional changes, just releasing as stable.

1.3079_01   17.08.2011

    [ BUG FIXES ]
    * Fix prefix behavior with load_app (alexrj)
    * send_file() shouldn't clobber previously-set response status
      (David Precious, reported by tylerdu - thanks!)
    * Depend on URI 1.59 - Fixes problems when redirecting with
      UTF-8 strings (Alberto Simões)
    * Fix before_serializer POD fix (Yanick Champoux)

    [ ENHANCEMENTS ]
    * send_file can send data (pass a reference to a scalar), and can
      specify a content-disposition filename. (Alberto Simões)
    * Set 'Server' HTTP response header as well as 'X-Powered-By'.  For cases